# endpoint

./: .gitignore  PKGBUILD  README.org  io.github.ydalton.Endpoint.yml  meson.build
data/: app.desktop.in  meson.build
data/icons/: meson.build
src/: Config.vala.in  Config.vapi  Endpoint.vala  camouflage.c  endpoint.gresources.xml  meson.build
src/Utils/: Header.vala  Utils.vala  meson.build
src/View/: CodeView.blp  CodeView.vala  CodeViewManager.vala  HeaderView.blp  HeaderView.vala  MainView.blp  MainView.vala  MainWindow.blp  MainWindow.vala  StatusLine.blp  StatusLine.vala  meson.build
subprojects/: libsoup-3.0.wrap
test/: meson.build  test-show-length.vala
